<resources>
    <string name="app_name">ApplicationReachTest</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="select_taluk">Select Taluk</string>
    <string name="select_village">Select Village</string>
    <string name="search_hint">Search </string>
    <string name="search_label">Search Activity </string>
    <string name="ok">Ok </string>
    <string name="select_country_error">Please select Country.</string>
    <string name="select_state_error">Please select state</string>

</resources>